added FTP configuration example

--- a/bblog.conf
+++ b/bblog.conf
@@ -12,5 +12,9 @@ EDITOR=vi		                 # set your editor for create your post blog
 PUBLISHED=[`date "+%m/%d/%Y - %T"`]      # date formated for index page entry
 DESTINATION_DIR=			 # sets the destination directory of bblog
 
+FTP_HOST=estebansannin.altervista.org    # set host for FTP Upload
+FTP_LOGIN=estebansannin			 # set the username for your FTP
+FTP_REMOTE_DIR=/bblog			 # set the destination directory on FTP server
+
 
 
