fix bug and add other function

--- a/bblog.conf
+++ b/bblog.conf
@@ -4,17 +4,35 @@
 
 
 
-TITLE_SITE=esteban@bblog~$		 # set the title of bblog
+TITLE_SITE=sblog - shellBlog 		 # set the title of bblog
 INDEX=index.html             		 # set the name on the page generate
-FOOTERTXT="Esteban Sannin"   		 # set your fouter in post blog
-THEME=default              		 # set your theme
+FOOTERTXT="Users"	   		 # set your fouter in post blog
+THEME=steel              		 # set your theme
 EDITOR=vi		                 # set your editor for create your post blog
-PUBLISHED=[`date "+%m/%d/%Y - %T"`]      # date formated for index page entry
+PUBLISHED=[`date "+%d/%b/%Y - %T"`]      # date formated for index page entry
 DESTINATION_DIR=			 # sets the destination directory of bblog
 
-FTP_HOST=estebansannin.altervista.org    # set host for FTP Upload
-FTP_LOGIN=estebansannin			 # set the username for your FTP
-FTP_REMOTE_DIR=/bblog			 # set the destination directory on FTP server
+NAME_LINK1="home"
+HREF_LINK1=""
+ 
+NAME_LINK2="link2"
+HREF_LINK2=""
+ 
+NAME_LINK3="link3"
+HREF_LINK3=""
+
+NAME_LINK4=""
+HREF_LINK4=""
+
+NAME_LINK5=""
+HREF_LINK5=""
+
+NAME_LINK6=""
+HREF_LINK6=""
+
+NAME_LINK7=""
+HREF_LINK7=""
+
 
 
 
