sistemati bug e directory

--- a/bblog.conf
+++ b/bblog.conf
@@ -4,10 +4,10 @@
 
 
 
-TITLE_SITE=sblog - shellBlog 		 # set the title of bblog
+TITLE_SITE="sblog - shellBlog" 		 # set the title of bblog
 INDEX=index.html             		 # set the name on the page generate
 FOOTERTXT="Users"	   		 # set your fouter in post blog
-THEME=steel              		 # set your theme
+
 EDITOR=vi		                 # set your editor for create your post blog
 PUBLISHED=[`date "+%d/%b/%Y - %T"`]      # date formated for index page entry
 DESTINATION_DIR=			 # sets the destination directory of bblog
