--- a/bblog.conf
+++ b/bblog.conf
@@ -4,7 +4,7 @@
 
 
 
-TITLE_SITE="sblog - shellBlog" 		 # set the title of bblog
+TITLE_SITE="bblog"   		         # set the title of bblog
 INDEX=index.html             		 # set the name on the page generate
 FOOTERTXT="Users"	   		 # set your fouter in post blog
 
